# bindRobot-Aubo

./: CMakeLists.txt  README.md  package.xml
camera/: CMakeLists.txt  camera.cpp  camera.h  camera_test.cpp  colorSave.cpp  depth_colorRegister.cpp  kinect.cpp  kinect.h
src/: Manipulator.cpp  Manipulator.h  camera.cpp  crossPoint.cpp  crossPoint.h  main.cpp
